- The image can now be made to look busy   By defining a busy period and a number of busy processes (threads)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,7 @@ services:
   lister:
     image: alanbchristie/pydatalister:latest
     build: .
+    environment:
+      - POST_LIST_SLEEP=1
+      - POST_SLEEP_BUSY_PERIOD=120
+      - BUSY_PROCESSES=4
