--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,6 @@ services:
       - PRE_LIST_SLEEP=1
       - POST_LIST_SLEEP=1
       - POST_SLEEP_BUSY_PERIOD=120
+      - POST_SLEEP_BUSY_WORK=0
       - BUSY_PROCESSES=4
       - USE_MEMORY_M=0
